feat(hmt-clan): add Seasons
