# apps/hmt-clan/src/app/api/season/route.ts
@@ -1,0 +1,6 @@
+import { NextResponse } from "next/server";
+import { getSeasons } from "@/lib/season";
+
+export function GET() {
+  return NextResponse.json(getSeasons());
+}
